--- a/index.html
+++ b/index.html
@@ -2,18 +2,39 @@
 <html>
     <head>
         <title>RJ's Awesome Website</title>
+        <link rel = "stylesheet" href = 'style.css'>
     </head>
 
     <body>
         <!-- All content goes here -->
-        <div>
+        <div id = "all-contents">
             <nav>
-
-            <nav>
+                <h1>RJ's Awesome Website</h1>
+                <ul id = "nav-ul">
+                    <li class = "nav-li"><a href = "index.html">Home</a></li>
+                    <li class = "nav-li"><a href = "portfolio.html">Portfolio</a></li>
+                </ul>
+            </nav>
             <main>
-
-            </main>
-        <div>
-    </body>
-    
+            <!-- Sidebar section -->
+            <div class = "sidebar">
+                <img class = "sidebar-img" src = "images/profilepic.png">
+            </div>
+             <!-- Content section -->
+            <div class = "content">
+                <h2>Reginald Bates </h2>
+                <p>Student at NHS</p>
+                <!-- Interests section -->
+                <div id = "interests">
+                    <h3>Interests</h3>
+                    <ul>
+                        <li>Photoshop</li>
+                        <li>Art</li>
+                        <li>Video games</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+    </div>
+ </body>
 </html>
