--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <main>
             <!-- Sidebar section -->
             <div class = "sidebar">
-                <img class = "sidebar-img" src = "images/profilepic.png">
+                <img class = "sidebar-img" src = "images/PROFILEPIC.jpeg">
             </div>
              <!-- Content section -->
             <div class = "content">
