--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
                 <ul id = "portfolio">
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/6737294135181312">What's For Dinner</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/4767940518658048">Shooting Star</a></li>
-                    <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6016023973904384"></a>>Animal Attack</a></li>
+                    <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6016023973904384">Animal Attack</a></li>
                 </ul>
             </div>
         </main>
