--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,8 @@
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-whats-for-dinner/6737294135181312">What's For Dinner</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-shooting-star/4767940518658048">Shooting Star</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6016023973904384">Animal Attack</a></li>
-                    <li><a href = .https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/5344019326222336>Ad Design</a></li>
+                    <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/5344019326222336">Ad Design</a></li>
+                    <li><a href = "https://www.khanacademy.org/computer-programming/fish-tank-royalty-castle/5429349593169920">Fish Tank</a></li>
                 </ul>
             </div>
         </main>
