--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/6016023973904384">Animal Attack</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-project-ad-design/5344019326222336">Ad Design</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/fish-tank-royalty-castle/5429349593169920">Fish Tank</a></li>
+                    <li><a href = "https://www.khanacademy.org/computer-programming/rjs-haunted-house/5908357676056576">Spooky Month</a><li>
                 </ul>
             </div>
         </main>
