--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
                     <li><a href = "https://www.khanacademy.org/computer-programming/fish-tank-royalty-castle/5429349593169920">Fish Tank</a></li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/rjs-haunted-house/5908357676056576">Spooky Month</a><li>
                     <li><a href = "https://www.khanacademy.org/computer-programming/spin-off-of-cool-mansion/6398517020639232">Build a House</a><li></li>
+                    <li><a href = "https://www.khanacademy.org/computer-programming/let-it-snow-let-it-snow-let-it-snow/5805748438876160">Make it Rain</a><li></li>
                 </ul>
             </div>
         </main>
